# mage

./: .gitignore  .mageconfig  Cargo.toml  README.md  build.rs  mage.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  maintenance.yml  release.yml  vscode-extension.yml
Test Scripts/: hello.mage
assets/: README.md
crates/mage-cli/: Cargo.toml  build.rs
crates/mage-cli/src/: bin.rs  main.rs  setup.rs  syntax.rs
crates/mage-cli/tests/: integration_test.rs  setup_tests.rs
crates/mage-cli/tree-sitter-mage/queries/: injections.scm  locals.scm
crates/mage-cli/tree-sitter-mage/src/: node-types.json
crates/mage-core/: Cargo.toml
crates/mage-core/src/: builtins.rs  config.rs  grammar.pest  interpreter.rs  lib.rs  output.rs  package.rs
crates/mage-core/templates/: build.mage  setup.mage
crates/mage-tui/: Cargo.toml
crates/mage-tui/src/: app.rs  config.rs  interpreter.rs  main.rs  ui.rs  view.rs  widgets.rs
editor-support/: README.md
editor-support/vscode/: mage-lang-0.1.0.vsix  package.json
examples/: .mageconfig  PACKAGE-WORKFLOWS.md  README.md  comprehensive-demo.mage  config_demo.mage  cross-platform-dotfiles.mage  dotfiles-maintenance.mage  dotfiles-setup.mage  dotfiles.mageconfig  dynamic-package-search.mage  env-specific-setup.mage  example-mage.toml  external-package-demo.mage  if_else_test.mage  interactive-package-demo.mage  package-workflow-demo.mage  project-generator.mage  smart-package-example.mage  system-info.mage  web-project-setup.mage
packaging/linux/: AppRun  mage-shell.desktop
packaging/macos/: Info.plist.template
scripts/: check-setup.ps1  setup-icon.ps1  test.mage
src/: bin.rs  builtins.rs  config.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  package.rs  parser.rs  setup.rs  syntax.rs
tests/: basic_tests.rs  block_debug.mage  clean_channel_test.mage  conditional_tests.rs  function_tests.rs  hello.mage  integration_test.rs  loop_tests.rs  minimal_working_test.mage  newline_test.mage  setup_tests.rs
tests/basics/: format_test.mage  oneline_test.mage  simple_debug.mage  test_exit_codes.mage  test_imbue.mage  test_method_call.mage
tests/conditionals/: arcane_syntax_test.mage  config_demo.mage  debug_detailed.mage  debug_scry.mage  debug_simple_block.mage  invoke_seal_test.mage  scry_morph_lest_test.mage  scry_morph_test.mage  simple_scry_test.mage
tests/functions/: test_bestow.mage
tests/loops/: channel_test.mage  debug_channel.mage  (+4 more)
tree-sitter-mage/: binding.gyp  fix-neovim-queries.lua  generate.js  grammar.js  install-to-mason.ps1  install-to-neovim.ps1  mage-crash-workaround.lua  neovim-setup.md  package-lock.json  package.json  parser.exp  parser.lib  rebuild.ps1  temp-mage-plugin.lua  tree-sitter.json
(+19 files in other folders)
