[package]
name = "mage"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
which = "7.0.3"
rustyline = "15"
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
dirs-next = "2.0"
tree-sitter = "0.25.4"
tree-sitter-highlight = "0.25.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Build dependencies are commented out until tree-sitter integration
# [build-dependencies]
# cc = "1.0"

[lib]
proc-macro = false

[build-dependencies]
cc = "1.0"
