[workspace]
resolver = "2"
members = [
    "crates/mage-core",
    "crates/mage-cli",
    "crates/mage-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/andrejground/mage"

[workspace.dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
