[package]
name = "mage-core"
version = "0.1.0"
edition = "2024"
description = "Core interpreter and language implementation for the Mage scripting language"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
which = "7.0.3"
dirs = "5"
dirs-next = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
