[package]
name = "mage-tui"
version = "0.1.0"
edition = "2024"
description = "GUI shell for the Mage scripting language"

[[bin]]
name = "mage-shell"
path = "src/main.rs"

[dependencies]
mage-core = { path = "../mage-core" }
pest = "2.7"
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
